--- a/lenart/grooper/index.html
+++ b/lenart/grooper/index.html
@@ -36,15 +36,15 @@
 
 var sirina=$(window).width();
 var polsirina=sirina/2.5;
-document.getElementById("circle").setAttribute("style","height:" + polsirina.toString() + "px");
 var krog = document.getElementById("circle");
 krog.style.borderRadius= "50%";
-krog.style.width= "40%";
+krog.style.width= polsirina+"px";
 krog.style.backgroundColor= "orange";
 krog.style.marginLeft="35%";
 krog.style.marginTop="3%"
+krog.style.height=polsirina+"px";
 krog.style.position= "relative";
-
+krog.style.border = "thick solid #0000FF";
 </script>
 
 </body>
